--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: echo $ANDROID_KEYSTORE_ALIAS
+    - run: echo "$ANDROID_KEYSTORE_ALIAS"
     - run: set
     - run: which aidl
     - run: which aapt
