--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -24,6 +24,11 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+
     - run: echo "$ANDROID_KEYSTORE_ALIAS"
     - run: set
     - run: ls $ANDROID_SDK_ROOT/
